# snob

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  file_paths.txt  install.sh  pyproject.toml  snob.toml
.github/workflows/: maturin-ci.yml  pytest-ci.yml  rust-binary-release.yml
pytest-snob/: README.md  pyproject.toml  snob.py
pytest-snob/pytest_snob/: plugin.py
python/: module_3.py
python/package_1/: module_1.py
python/package_1/package_2/: module_2.py
python/package_3/: module_4.py
python_code/package_1/: .module_1.py.swp  module_1.py
python_code/package_1/package_2/: module_2.py
python_code/package_3/: module_4.py
python_code/tests/unit/package_1/: test_module_1.py
python_code/tests/unit/package_1/package_2/: module_2_test.py
python_code/tests/unit/package_3/: test_module_4.py
snob/: Cargo.toml
snob/src/: main.rs
src/: ast.rs  cli.rs  config.rs  fs.rs  graph.rs  lib.rs  logging.rs  main.rs  results.rs  stdin.rs  utils.rs
tests/: comprehensive_integration_test.rs  nested_package.rs  python_interface_test.rs  relative_import.rs  simple.rs  simple_unit.rs  test_pattern_integration_test.rs  test_utils.rs
tests/fixtures/: mod.rs
