[package]
name = "snob"
version = "0.1.0"
edition = "2024"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
rustpython-ast = { version = "0.3.1", features = ["visitor"] }
rustpython-parser = "0.3.1"
ignore = "0.4.23"
anyhow = "1.0.95"
rayon = "1.10.0"
