[package]
name = "snob"
description = "A tool that only selects meaningful python tests to run."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexandre Pasmantier <alex.pasmant@gmail.com>", "Bertrand Chardon <bertrand.chardon@gmail.com>"]
repository = "https://github.com/alexpasmantier/snob"
homepage = "https://github.com/alexpasmantier/snob"
keywords = []
categories = [
  "command-line-utilities",
  "command-line-interface",
  "concurrency",
  "development-tools",
]
rust-version = "1.81"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
rustpython-ast = { version = "0.3.1", features = ["visitor"] }
rustpython-parser = "0.3.1"
ignore = "0.4.23"
anyhow = "1.0.95"
rayon = "1.10.0"
stderrlog = "0.6.0"
log = "0.4.22"

[profile.release]
# lto = "fat"
# codegen-units = 1
