[package]
name = "snob"
description = "A tool that only selects meaningful python tests to run."
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = [
  "Alexandre Pasmantier <alex.pasmant@gmail.com>",
  "Bertrand Chardon <bertrand.chardon@gmail.com>",
]
repository = "https://github.com/alexpasmantier/snob"
homepage = "https://github.com/alexpasmantier/snob"
keywords = []
categories = [
  "command-line-utilities",
  "command-line-interface",
  "python",
  "development-tools",
]
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "snob_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "snob"
path = "src/main.rs"


[dependencies]
pyo3 = { version = "0.25", optional = true }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.9" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.9" }
ignore = "0.4"
anyhow = "1.0"
rayon = "1.10"
log = "0.4"
stderrlog = "0.6"
globset = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
rustc-hash = "2.1"


[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"

[dev-dependencies]
tempfile = "3.14"


[features]
default = []
python = ["pyo3"]

[profile.release]
lto = "fat"
codegen-units = 1
